replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/14_wait_outside_init.su
// Expected error: SUT0130 — `wait` used outside a var-decl initializer.
// The keyword is only legal as the RHS of a typed declaration. Using
// it as a plain expression is a position error.

function int Bad() {
    int x = 5;
    return x + wait;
}
